lang/macro/tests/ui/fail/05-forbidden-ident.stderr
error: identifiers starting with `__liquid` or `__LIQUID` are forbidden in contract
  --> $DIR/05-forbidden-ident.rs:12:12
   |
12 |         fn __liquid_noop(&self) {}
   |            ^^^^^^^^^^^^^
